--- a/Python_Basics_Introduction.ipynb
+++ b/Python_Basics_Introduction.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "123a15d1",
    "metadata": {
     "deletable": false,
@@ -88,11 +88,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n"
+    "print(\"Hello World\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -118,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "406612a9",
    "metadata": {
     "deletable": false,
@@ -134,11 +143,21 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n",
+      "1000\n",
+      "3.142\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print(50)\n",
+    "print(1000)\n",
+    "print(3.142)"
    ]
   },
   {
@@ -164,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f96cf395",
    "metadata": {
     "deletable": false,
@@ -180,11 +199,17 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50 1000 3.142 Hello World\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print(50, 1000, 3.142, \"Hello World\")"
    ]
   },
   {
@@ -210,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "57f1d10a",
    "metadata": {
     "deletable": false,
@@ -226,11 +251,23 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "how are you\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print (\"how are you\") # This line prints how are you\n",
+    "# Single comment\n",
+    "\n",
+    "# Comment on\n",
+    "# Different\n",
+    "# Lines\n"
    ]
   },
   {
@@ -243,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "820cb4ad",
    "metadata": {
     "deletable": false,
@@ -259,17 +296,37 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' Docstrings are pretty cool\\nfor writing longer comments\\nor notes about the code'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "\"\"\" Docstrings are pretty cool\n",
+    "for writing longer comments\n",
+    "or notes about the code\"\"\"\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "173fd9b8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -283,7 +340,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+   }
   }
  },
  "nbformat": 4,
